fix: correct URL for Tommaso's site

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div id='title'>
       <h4 id='title-1'>Welcome to the</h4>
       <h1 id='title-2'>Guitar Fretboard Trainer</h1>
-      <h5 id='inspired-by'>Inspired by (and intended for use in conjunction with) Tommaso's <a href="musictheoryforguitar.com">MusicTheoryForGuitar</a> <a href="https://www.youtube.com/user/MusicTheoryForGuitar">YouTube channel</a>, specifically its <a href="https://www.youtube.com/watch?v=PJddQ6Q0UDo">guitar fretboard memorization exercise</a>!!  Thanks Tommaso!!</h5>
+      <h5 id='inspired-by'>Inspired by (and intended for use in conjunction with) Tommaso's <a href="https://www.musictheoryforguitar.com/">MusicTheoryForGuitar</a> <a href="https://www.youtube.com/user/MusicTheoryForGuitar">YouTube channel</a>, specifically its <a href="https://www.youtube.com/watch?v=PJddQ6Q0UDo">guitar fretboard memorization exercise</a>!!  Thanks Tommaso!!</h5>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/PJddQ6Q0UDo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
