feat: add credit

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
     <div id="ex1-string2" class="string-div">------------------------------</div>
     <div id="ex1-string1" class="string-div">------------------------------</div>
 
+    <hr>
+    <p>This afternoon web project shared with love by <a href="https://www.github.com/stevenkitzes">Steven Kitzes</a>.  Fill the world with music!!</p>
+
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
