Revert "fix: use js audio api"
This reverts commit 98922eb18e4ec731d81434c47d262ba4a3bf3782.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
       <button id="metronome-faster">Faster</button>
       <br>
       <button id="metronome-button">Start or stop</button>
+      <audio id="metronome-audio" autoplay="0" autostart="0" loop="0">
+        <source src="tick.mp3" type="audio/mpeg">
+      </audio>
       <hr>
     </div>
 
