test: see if audio creation in user action fixes ios playback

--- a/index.html
+++ b/index.html
@@ -63,9 +63,6 @@
       <button id="metronome-faster">Faster</button>
       <br>
       <button id="metronome-button">Start or stop</button>
-      <audio id="metronome-audio" autoplay="0" autostart="0" loop="0">
-        <source src="tick.mp3" type="audio/mpeg">
-      </audio>
       <hr>
     </div>
 
@@ -122,7 +119,7 @@
     <div id="ex1-string1" class="string-div">------------------------------</div>
 
     <hr>
-    <p>This afternoon web project shared with love by <a href="https://www.github.com/stevenkitzes">Steven Kitzes</a>.  Fill the world with music!!</p>
+    <p>This afternoon web project shared with love by <a href="https://www.github.com/stevenkitzes">Steven Kitzes</a>.  Fill the world with music!!  v1.2</p>
 
     <script type="text/javascript" src="main.js"></script>
   </body>
