--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
     <div id="ex1-string1" class="string-div">------------------------------</div>
 
     <hr>
-    <p>This afternoon web project shared with love by <a href="https://www.github.com/stevenkitzes">Steven Kitzes</a>.  Fill the world with music!!  v1.2</p>
+    <p>This afternoon web project shared with love by <a href="https://www.github.com/stevenkitzes">Steven Kitzes</a>.  Fill the world with music!!  v1.2.1</p>
+    <pre id='debug'></pre>
 
     <script type="text/javascript" src="main.js"></script>
   </body>
