feat: add audio queue feature

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 
     <hr>
     <h2>Flash Cards</h2>
+    <audio id='flash-card-audio'></audio>
     <div id="flash-card-selector">
       <div><input id="find-note" class="radio" name="flash-cards" type="radio"><label for="find-note">Find note on string</label></div>
       <div><input id="name-note" class="radio" name="flash-cards" type="radio"><label for="name-note">Name note from fret and string</label></div>
